--- a/car_three.js/car.html
+++ b/car_three.js/car.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>car three.js</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.135.0/build/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.135.0/examples/js/controls/OrbitControls.js"></script>
     <script src="script.js" type="module"></script>
 </body>
 </html>
